update to 1.1.0 (2), add BluetoothHeadsetBroadcastReceiver to support silencing the ringer when connecting a bluetooth headset.

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.hanhuy.android.a2dp.volume" android:versionCode="1" android:versionName="1.0.0">
+    package="com.hanhuy.android.a2dp.volume" android:versionCode="2" android:versionName="1.1.0">
     <application android:icon="@drawable/icon" android:label="@string/app_name">
         <activity android:name=".A2DPVolumeSettings" android:label="@string/app_name">
             <intent-filter>
@@ -10,11 +10,19 @@
         </activity>
 
         <receiver
-            android:name=".BluetoothBroadcastReceiver" android:exported="true">
+            android:name=".BluetoothA2dpBroadcastReceiver" android:exported="true">
             <intent-filter>
                 <action android:name="android.bluetooth.a2dp.action.SINK_STATE_CHANGED" />
                 <!-- pre-2.0 intent name -->
                 <action android:name="android.bluetooth.a2dp.intent.action.SINK_STATE_CHANGED" />
+            </intent-filter>
+        </receiver>
+        <receiver
+            android:name=".BluetoothHeadsetBroadcastReceiver" android:exported="true">
+            <intent-filter>
+                <action android:name="android.bluetooth.headset.action.STATE_CHANGED" />
+                <!-- pre-2.0 intent name -->
+                <action android:name="android.bluetooth.intent.action.HEADSET_STATE_CHANGED" />
             </intent-filter>
         </receiver>
         <receiver android:name=".UserPresentBroadcastReceiver"
@@ -28,5 +36,5 @@
     <uses-sdk android:minSdkVersion="3" android:targetSdkVersion="5" />
 
     <uses-permission android:name="android.permission.BLUETOOTH" />
-    <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />
+    
 </manifest>
