--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.hanhuy.android.a2dp.volume" android:versionCode="4" android:versionName="1.1.2">
+    package="com.hanhuy.android.a2dp.volume" android:versionCode="5" android:versionName="1.1.3">
     <application android:icon="@drawable/icon" android:label="@string/app_name">
         <activity android:name=".A2DPVolumeSettings" android:label="@string/app_name">
             <intent-filter>
@@ -36,5 +36,6 @@
     <uses-sdk android:minSdkVersion="3" android:targetSdkVersion="5" />
 
     <uses-permission android:name="android.permission.BLUETOOTH" />
+    <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />
     
 </manifest>
