--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.hanhuy.android.a2dp.volume" android:versionCode="7" android:versionName="1.2.1">
+    package="com.hanhuy.android.a2dp.volume" android:versionCode="8" android:versionName="1.2.2">
     <application android:icon="@drawable/icon" android:label="@string/app_name">
         <activity android:name=".A2DPVolumeSettings" android:label="@string/app_name">
             <intent-filter>
@@ -37,5 +37,6 @@
 
     <uses-permission android:name="android.permission.BLUETOOTH" />
     <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />
+    <uses-permission android:name="android.permission.WRITE_SETTINGS" />
     
 </manifest>
